# WBSNet-research-paper

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  WBSNet_Architecture.drawio  WBSNet_Architecture_Plan.md  WBSNet_Colab.ipynb  WBSNet_Data_Preprocessing_Plan.md  WBSNet_Kaggle_Session1.ipynb  WBSNet_Kaggle_Session2.ipynb  WBSNet_Kaggle_Session3.ipynb  WBSNet_Model.ipynb  WBSNet_Research_Proposal.md  aggregate_results.py  data_preprocessing.ipynb  environment.yml  evaluate.py  kaggle-session-plan.md  predict.py  pyproject.toml  related_work_WBSNet - Related Work.csv  requirements-colab.txt  requirements.txt  run-plan.md  session-updates.md  test.py  train.py  wbsnet-model.ipynb
configs/: ablation_db2_wavelet.yaml  ablation_hfba_only.yaml  ablation_identity_unet.yaml  ablation_lfsa_only.yaml  ablation_no_boundary_supervision.yaml  ablation_no_wavelet_attention.yaml  clinicdb_unet_baseline.yaml  clinicdb_wbsnet.yaml  default.yaml  isic2018_unet_baseline.yaml  isic2018_wbsnet.yaml  kaggle_clinicdb_wbsnet.yaml  kaggle_isic2018_wbsnet.yaml  kaggle_kvasir_wbsnet.yaml  kvasir_colondb_generalization.yaml  kvasir_colondb_generalization_baseline.yaml  kvasir_unet_baseline.yaml  kvasir_wbsnet.yaml
diagrams/: README.md  wbs_module.mmd  wbs_module.tikz  wbsnet_architecture.mmd  wbsnet_architecture.tikz
docs/: HARDWARE_REQUIREMENTS.md  related_work.csv
docs/planning/: WBSNet_Architecture_Plan.md
paper/: Makefile  README.md  WBS NET LEARNING.docx  paper-outline.md  paper.tex  references.bib
paper/figures/: README.md
scripts/: build_kaggle_notebooks.py  check_system.py  import_legacy_paper_runs.py  make_paper_figures.py  model_complexity.py  plot_lambda_sweep.py  run_ablation_suite.py  run_paper_optionA.py  setup_dgx.sh  significance_tests.py  slurm_train.sh  train_dgx.sh  verify_repo.py
wbsnet/: __init__.py  config.py  engine.py  losses.py  metrics.py  visualization.py
wbsnet/data/: __init__.py  datasets.py  isic_dataset.py  polyp_dataset.py  transforms.py
wbsnet/models/: __init__.py  decoder.py  hfba.py  lfsa.py  resnet.py  wavelet.py  wbs_module.py  wbsnet.py
wbsnet/utils/: __init__.py  boundary_gt.py  distributed.py  env.py  io.py  logger.py  seed.py
