[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wbsnet"
version = "0.1.0"
description = "DGX-ready WBSNet research codebase for medical image segmentation."
readme = "README.md"
requires-python = ">=3.10"
# Pinned to the exact versions in requirements.txt for reproducibility.
# When bumping, update both files together and re-run pip-audit.
dependencies = [
  "torch==2.2.2",
  "torchvision==0.17.2",
  "numpy==1.26.4",
  "Pillow==10.3.0",
  "PyYAML==6.0.1",
  "tqdm==4.66.4",
  "wandb==0.17.0",
  "pandas==2.2.2",
  "matplotlib==3.8.4",
  "pywavelets==1.6.0",
  "albumentations==1.4.21",
  "opencv-python==4.9.0.80",
  "scipy==1.12.0",
  "segmentation-models-pytorch==0.3.4",
  "pytorch-wavelets==1.3.0",
]

[tool.setuptools.packages.find]
include = ["wbsnet*"]
